A workaround to allow the test code to modify env varaibles.