@@ -1142,6 +1142,8 @@
                haltonerror="no">
             <jvmarg value="-Dfile.encoding=UTF-8"/>
             <jvmarg value="-Xshare:off"/>
+            <jvmarg line="--add-opens java.base/java.util=ALL-UNNAMED"/>
+            <jvmarg line="--add-opens java.base/java.lang=ALL-UNNAMED"/>
             <classpath>
                 <path refid="test.classpath"/>
                 <fileset dir="${build.dir}">
@@ -1192,6 +1194,8 @@
                haltonerror="no">
             <jvmarg value="-Dfile.encoding=UTF-8"/>
             <jvmarg value="-Xshare:off"/>
+            <jvmarg line="--add-opens java.base/java.util=ALL-UNNAMED"/>
+            <jvmarg line="--add-opens java.base/java.lang=ALL-UNNAMED"/>
             <classpath>
                 <path refid="test.classpath"/>
                 <fileset dir="${build.dir}">
@@ -1260,6 +1264,8 @@
                haltonerror="no" showoutput="yes">
             <jvmarg value="-Dfile.encoding=UTF-8"/>
             <jvmarg value="-Xshare:off"/>
+            <jvmarg line="--add-opens java.base/java.util=ALL-UNNAMED"/>
+            <jvmarg line="--add-opens java.base/java.lang=ALL-UNNAMED"/>
             <classpath>
                 <path refid="test.classpath"/>
                 <fileset dir="${build.dir}">
